@@ -1,6 +1,7 @@
 """Pathname and path-related operations for the Macintosh."""
 
 import os
+import warnings
 from stat import *
 import genericpath
 from genericpath import *
@@ -169,7 +170,7 @@ def walk(top, func, arg):
     beyond that arg is always passed to func.  It can be used, e.g., to pass
     a filename pattern, or a mutable object designed to accumulate
     statistics.  Passing None for arg is common."""
-
+    warnings.warnpy3k("In 3.x, os.path.walk is removed in favor of os.walk.")
     try:
         names = os.listdir(top)
     except os.error:
